<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClickControls</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="wifi">wifi</string>
    <string name="threeG">3G</string>
    <string name="vibrate">vibrate</string>
    <string name="toggle_desc">Toggle Description</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="anim_scale">Scale</string>

    <!-- Styled Activity -->
    <string name="styled_activity_name">Styled Activity</string>
    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>
    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode &gt;</string>
    <string name="action_label_bak">Action Bar Background &gt;</string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>

    <!-- Device Data -->
    <string name="new_fragment">New fragment</string>
    <string name="fragment_stack_support">Stack</string>
    <string name="new_fragment">New fragment</string>
    <string name="fragment_tabs">Tabs</string>

</resources>