<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- custom -->
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_search"/>

    <!-- icon -->
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh_holo_light"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_refresh"/>

    <!-- icon + text -->
    <item
        android:id="@+id/menu_both"
        android:icon="@drawable/ic_menu_star_holo_light"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_label_both"/>

    <!-- text -->
    <item
        android:id="@+id/menu_text"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_text"/>
    <item
        android:id="@+id/menu_logo"
        android:checkable="true"
        android:checked="false"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_logo"/>
    <item
        android:id="@+id/menu_up"
        android:checkable="true"
        android:checked="false"
        android:showAsAction="ifRoom"
        android:title="@string/action_label_up"/>

    <!-- Navigation submenu -->
    <item
        android:id="@+id/menu_nav"
        android:title="@string/action_label_nav">
        <menu>
            <group
                android:id="@+id/menu_nav_group"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_nav_tabs"
                    android:checked="true"
                    android:title="@string/action_label_nav_tabs"/>
                <item
                    android:id="@+id/menu_nav_drop_down"
                    android:title="@string/action_label_nav_drop_down"/>
                <item
                    android:id="@+id/menu_nav_label"
                    android:title="@string/action_label_nav_label"/>
            </group>
        </menu>
    </item>

    <!-- action bar background submenu -->
    <item
        android:id="@+id/menu_bak"
        android:title="@string/action_label_bak">
        <menu>
            <group
                android:id="@+id/menu_bak_group"
                android:checkableBehavior="single" >
                <item
                    android:id="@+id/menu_bak_none"
                    android:checked="true"
                    android:title="@string/action_label_bak_none"/>
                <item
                    android:id="@+id/menu_bak_gradient"
                    android:title="@string/action_label_bak_gradient"/>

                <!-- <item android:id="@+id/menu_bak_9_patch" android:title="@string/action_label_image" /> -->
            </group>
        </menu>
    </item>

</menu>